--- a/src/app/Components/persona/persona.component.scss
+++ b/src/app/Components/persona/persona.component.scss
@@ -107,3 +107,19 @@
 .toast:not(.showing):not(.show) {
   display: none !important;
 }
+
+td {
+  cursor: pointer;
+}
+.selected-tr {
+  & > td {
+    background-color: var(--bs-success);
+
+    &:last-child {
+      border-radius: 0 15px 15px 0;
+    }
+    &:first-child {
+      border-radius: 15px 0 0 15px;
+    }
+  }
+}
